--- a/.gitignore
+++ b/.gitignore
@@ -190,4 +190,8 @@ cython_debug/
 # Ignore code-workspaces
 *.code-workspace
 
+test.py
+*.log
+logs.*
+
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
