--- a/TweetAnalysis/config.yml
+++ b/TweetAnalysis/config.yml
@@ -40,10 +40,10 @@ POSITIVE_INDEX: 2
 SEED: 42
 
 # Twitter api tokens and keys
-CONSUMER_KEY: aDvKcFXG3OwhQsTToW19VcwLn
-CONSUMER_SECRET: ZQWVmBXMfTb027IwXKdGibPxve9ZkX8SSOIrRXmInjtjndGOaJ
-ACCESS_TOKEN: 1438163536329560067-QNxot5FDcyDkXgrBwq5BdYwIQL30b7
-ACCESS_SECRET: BYH14v7UHZRXgprM3P4lt6UZgDZ9m738fCwdE0TzfVxEL
+CONSUMER_KEY: 
+CONSUMER_SECRET: 
+ACCESS_TOKEN: 
+ACCESS_SECRET: 
 
 # kafka configs
 KAFKA_TOPIC_NAME: tweets_stream
