config for cassandra

--- a/TweetAnalysis/config.yml
+++ b/TweetAnalysis/config.yml
@@ -40,7 +40,10 @@ POSITIVE_INDEX: 2
 SEED: 42
 
 # Twitter api tokens and keys
-
+CONSUMER_KEY: vmcvpGGbNZZxQGBHFjOwDyh90
+CONSUMER_SECRET: D5YEqpV5dpfgt10envgiuMd7NoKD2iqi4Ybl2KuOHlyUxjyLod
+ACCESS_TOKEN: 1438163536329560067-Sa4cmAwdg2mFnivwPv4q2SKJmXWvmV
+ACCESS_SECRET: CHJSHbZADSfMJ0Zi4q54DLDJEohPZkrCosQjkh3VWOe0F
 
 # kafka configs
 KAFKA_TOPIC_NAME: tweets_stream
