--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Sphinx
 coverage
 awscli
 flake8
-python-dotenv>=0.5.1
+python-dotenv
 
 
 # backwards compatibility
@@ -19,15 +19,14 @@ gensim
 pandas
 pyspark
 kafka-python
-streamlit
 seaborn
 tweepy==3.9.0
 pydantic
 strictyaml
 joblib
-transformers
-sentencepiece
+# transformers
+# sentencepiece
 
 
--f https://download.pytorch.org/whl/cu113/torch_stable.html
-torch==1.11.0+cu113
+# -f https://download.pytorch.org/whl/cu113/torch_stable.html
+# torch==1.11.0+cu113
