--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,6 +15,8 @@ include TweetAnalysis/config.yml
 include TweetAnalysis/VERSION
 include models/.gitignore
 include data/.gitignore
+include TweetAnalysis/Kafka
+include TweetAnalysis/Spark
 
 
 
