--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -13,12 +13,11 @@ recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
 include requirements.txt
 include TweetAnalysis/config.yml
 include TweetAnalysis/VERSION
-include models/.gitignore
-include data/.gitignore
 include TweetAnalysis/Kafka
 include TweetAnalysis/Spark
 include TweetAnalysis/Kafka/*
 include TweetAnalysis/Spark/*
+include TweetAnalysis/Spark/Text/*
 
 
 
