--- a/.gitignore
+++ b/.gitignore
@@ -193,6 +193,6 @@ cython_debug/
 test.py
 *.log
 logs.*
-checkpoint/
-test2.py
+checkpoints/
+app.py
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
