--- a/SparkStream/config.yml
+++ b/SparkStream/config.yml
@@ -7,6 +7,7 @@ KAFKA_HOST: localhost:9092
 CASSANDRA_SPARK_APP_NAME: cassandra reader
 CASSANDRA_HOST: localhost:9042
 CASSANDRA_KEYSPACE: twitter
-CASSANDRA_TABLE: tweets
+CASSANDRA_DUMP_TABLE: raw_tweets
+CASSANDRA_PROCESSED_TABLE: processed_tweets
 CASSANDRA_OFFLINE_TABLE: offline_tweets
 
