adding writing to redis

--- a/.gitignore
+++ b/.gitignore
@@ -196,4 +196,5 @@ logs.*
 checkpoints/
 app.py
 run.sh
+pantheon.tsv
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
