--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-# click
-# Sphinx
-# coverage
-# awscli
-# flake8
-# pathlib2
-# PyArrow
-# nltk
-# pandas
-# pyspark==3.2.0
-# joblib
-# findspark
+click
+Sphinx
+coverage
+awscli
+flake8
+pathlib2
+PyArrow
+nltk
+pandas
+pyspark==3.2.0
+joblib
+findspark
 
 
-uvicorn==0.17.6
-fastapi==0.78.0
-python-dotenv
+# uvicorn==0.17.6
+# fastapi==0.78.0
+# python-dotenv
